syntax = "proto3";
package coinbit;

option go_package = "generated/model";

import "google/protobuf/timestamp.proto";

message AboveThreshold {
    string wallet_id = 1;
    float amount_within_two_mins = 2;
    bool status = 3;
    google.protobuf.Timestamp start_period = 4;
}

message AboveThresholdMap {
    map<string, AboveThreshold> items = 1;
}