syntax = "proto3";
package coinbit;

option go_package = "generated/model";

import "google/protobuf/timestamp.proto";

message Deposit {
    string wallet_id = 1;
    float amount = 2;
    google.protobuf.Timestamp deposited_at = 3;
}